--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@next/third-parties": "^15.2.2",
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
     "next": "15.2.2",
