--- a/package.json
+++ b/package.json
@@ -11,17 +11,30 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@next/third-parties": "^15.2.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.12.7",
     "next": "15.2.2",
+    "prismjs": "^1.30.0",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
+    "remark-rehype": "^11.1.1",
+    "shiki": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
