--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,6 +2,22 @@
   "name": "King - 个人技术博客",
   "short_name": "King",
   "description": "分享技术见解，探索创新解决方案，连接志同道合的技术爱好者",
+  "keywords": [
+    "技术博客",
+    "分享",
+    "技术",
+    "创新",
+    "解决方案",
+    "技术爱好者",
+    "个人技术博客",
+    "全栈开发者",
+    "前端开发",
+    "后端开发",
+    "Web3技术",
+    "Rust编程",
+    "技术分享",
+    "Chrome扩展"
+  ],
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
